// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createExportFromLanguageAndNamespace > should create a export from language and namespace correctly 1`] = `"export * as common from "/~translations/en/common";"`;

exports[`createFunctionFromEntry > should create a function from an entry correctly 1`] = `
"export function hello(name: string) {
	return \`Hello, \${name}!\`;
}"
`;

exports[`createRegistry > should create a registry correctly 1`] = `
"export const defaultLanguage: "en" = "en";
export const languages: ("en" | "pt")[] = ["en","pt"];
export const namespaces: ("common" | "zod")[] = ["common","zod"];

const modules = {
	en: {
		common: async () => import("/~translations/en/common"),
		zod: async () => import("/~translations/en/zod"),
	},
	pt: {
		common: async () => import("/~translations/pt/common"),
		zod: async () => import("/~translations/pt/zod"),
	},
} as const;

export async function importTranslationModule(
	language: (typeof languages)[number],
	namespace: (typeof namespaces)[number]
) {
	return modules[language][namespace]();
}"
`;

exports[`createRegistry > should create a registry with custom prefix correctly correctly 1`] = `
"export const defaultLanguage: "en" = "en";
export const languages: ("en" | "pt")[] = ["en","pt"];
export const namespaces: ("common" | "zod")[] = ["common","zod"];

const modules = {
	en: {
		common: async () => import("./en/common"),
		zod: async () => import("./en/zod"),
	},
	pt: {
		common: async () => import("./pt/common"),
		zod: async () => import("./pt/zod"),
	},
} as const;

export async function importTranslationModule(
	language: (typeof languages)[number],
	namespace: (typeof namespaces)[number]
) {
	return modules[language][namespace]();
}"
`;
